--- a/my_newsapp/templates/my_newsapp/create_article.html
+++ b/my_newsapp/templates/my_newsapp/create_article.html
@@ -31,7 +31,7 @@
           tome nalazi li se u context-u article keyword - ako da, znači da smo u Edit view-u gdje article predstavlja Article instancu koju
           želimo editirati.  
   {% endcomment %}
-  <div class="container mb-5 mt-5">
+  <div class="container mb-5 mt-5"> <!-- main container start -->
     <form action="{% if article %}
                     {% url 'my_newsapp:edit-article' id=article.id %}
                   {% else %}
@@ -47,7 +47,7 @@
       
       <div class="image-formset"> <!-- ImageInlineFormSet start -->
         <h3 class="mt-5 mb-0">Add images</h3>
-        <p style="color:lightslategray;">*First image is used for a thumbnail image</p>
+        <p class="pb-3" style="color:lightslategray;">*First image is used for a thumbnail image</p>
 
         <div class="errors">
           {% if image_formset.non_form_errors %}
@@ -55,15 +55,6 @@
               {{ image_formset.non_form_errors }}
             </div>
           {% endif %}
-        </div>
-
-        <div class="row">
-          <div class="col-sm-4">
-            <p>Images:</p>
-          </div>
-          <div class="col-sm-6">
-            <p>Description:</p>
-          </div>
         </div>
 
         {{ image_formset.management_form }}
@@ -74,28 +65,30 @@
               {{ image_form.non_field_errors }}
             </span>
           {% endif %}
-          <div class="row image-form mb-3">
-            <div class="col-sm-4">
+          <div class="row image-form mb-3"> 
+            <div class="col-lg-4 col-md-12">
               {% comment %} {% if image_form.instance.pk %}{{ image_form.DELETE }}{% endif %} {% endcomment %}
               {{ image_form.image }}
-              <div class="position-bottom">
+              <div class="row pl-3 ">
                 {% comment %} for="id_images-{{ forloop.counter0 }}-image" je rješenje da label-ovom for atributu dodijelim id
                 file inputa !!!{% endcomment %}
-                <label class="image-label btn btn-secondary mb-0 mr-3" for="id_images-{{ forloop.counter0 }}-image">Choose image</label>
+                <label class="image-label btn btn-secondary mb-0" for="id_images-{{ forloop.counter0 }}-image">Choose image</label>
                 {% comment %} Span is an inline element. It has no width or height.
-                Turn it into a block-level element, then it will accept dimension directives. {% endcomment %} 
-                <span class="align-bottom overflow-hidden">No image choosen</span>
+                Turn it into a block-level element, then it will accept dimension directives. {% endcomment %}     
+                <span class="mt-3 ml-4 d-inline-block text-truncate" style="max-width: 142px;">No image choosen</span>
               </div>
             </div>
-            <div class="col-sm-7 text-input">
+            <!-- d-lg-none znači da element ne postoji (display: none) kada je screen size lg ili xl, ali postoji na md, sm i najnamjem -->
+            <div class="col-12 d-lg-none" style="height: 10px"></div> <!-- razmak između choose image i describe, vidljiv na medium i manjim screnovima -->
+            <div class="col-lg-7 col-md-10 col-sm-12 text-input">
               {{ image_form.description }}
             </div>
-          </div>
+          </div> 
         {% endfor %} <!-- image_forms end -->
       </div> <!-- ImageInlineFormSet end -->
       
       <div class="file-formset"> <!-- FileInlineFormSet start -->
-        <h3 class="mt-5 mb-3">Add files</h3>
+        <h3 class="mt-5 mb-3 pb-3">Add files</h3>
 
         <div class="errors">
           {% if file_formset.non_form_errors %}
@@ -104,24 +97,20 @@
             </div>
           {% endif %}
         </div>
-        
-
-        <p>Files:</p>
-        
+                
         {{ file_formset.management_form }}
 
         {% for file_form in file_formset %}
           <div class="row file-form mb-3">
-            <div class="col-sm-4">
+            <div class="col-lg-4 col-md-6 col-12">
               {{ file_form.file }}
-              <div class="position-bottom">
+              <div class="row pl-3">
                 {% comment %} for="id_files-{{ forloop.counter0 }}-file" je rješenje da label-ovom for atributu dodijelim id
                 file inputa !!!{% endcomment %}
-                <label class="file-label btn btn-secondary mb-0 mr-3" for="id_files-{{ forloop.counter0 }}-file">Choose file</label> 
-                <span class="align-bottom overflow-hidden">No file choosen</span>
+                <label class="file-label btn btn-secondary mb-0" for="id_files-{{ forloop.counter0 }}-file">Choose file</label> 
+                <span class="mt-3 ml-4 d-inline-block text-truncate" style="max-width: 142px;">No file choosen</span>
               </div>
             </div>
-            
           </div>
         {% endfor %}
       </div> <!-- FileInlineFormSet end -->
@@ -131,7 +120,7 @@
       <input type="submit" name="submit" value="Publish" class="btn btn-primary btn-lg mt-2" id="submit-button">
       {% endblock submit_button %}
     </form> <!-- Main Form end -->
-  </div>
+  </div> <!-- main container start -->
 {% endblock content %}
 
 {% block script %}
