--- a/my_newsapp/templates/my_newsapp/snippets/other_article.html
+++ b/my_newsapp/templates/my_newsapp/snippets/other_article.html
@@ -1,4 +1,4 @@
-<div class="other-article">
+<div>
   <p class="mb-0">
     In<a class="cat-title scroll-to-top" href="{{ article.category.get_absolute_url }}"> {{ article.category.title }}</a>
   </p>
