--- a/my_newsapp/templates/my_newsapp/home.html
+++ b/my_newsapp/templates/my_newsapp/home.html
@@ -30,82 +30,77 @@
 {% block content %}
   <div class="container home mt-60px mb-80px">
       <div class="row">
-        <div class="col border-right"> <!-- Left main column start - Primary category articles -->
+        <div class="col border-right pb-4"> <!-- Left main column start - Primary category articles -->
           <h1 class="pb-3" style="font-weight: 700">
             <a class="cat-title scroll-to-top" href="{{ primary_category.get_absolute_url }}">{{ primary_category.title }}</a>
           </h1>
           {% for article in primary_category.articles.all|slice:':3' %}
-            <div class="row padding-top-20 padding-right-20 border-bottom-shorter">
-
-              <div class="col-xl-3 col-lg-4 col-md-5 pt-2 pr-0">
+            <div class="row padding-top-20 padding-right-20 border-bottom-shorter pb-2">
+              <div class="col-xl-3 col-lg-4 col-md-12 pt-2 pr-0 pb-2">
                 <!-- image container -->
                 <div class="article-thumbnail-image" style="background-image: url('{{ article.images.first.image.url }}');"></div>
               </div>
-
-              <div class="col-xl-9 col-lg-8 col-md-7 article-preview"> 
-                <div class="row pl-3 title">
+              <div class="col-xl-9 col-lg-8 col-md-12"> 
+                <div class="row pl-3">
                   <h3><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h3>
                 </div>
-                <div class="row pl-3 text-lightbrown pub-date">
+                <div class="row pl-3 text-lightbrown">
                   <p style="margin-bottom: 5px;">{{ article.pub_date.date }}</p>
                 </div>
-                <div class="row pl-3 short-description">
+                <div class="row pl-3">
                   <p style="color: rgb(63, 63, 63)">{{ article.short_description }}</p>
                 </div>                                              
               </div> 
-
             </div>
           {% endfor %}
         </div> <!-- Left main column end - Primary category articles -->
-        <div class="col-md-5 mt-1 pl-4 ml-4" style="height: 746px;"> <!-- Right main column start  -->
-          <div class="row secondary-articles" style="height: 375px">  <!-- Secondary articles start  -->
-            <h2 class="pb-3" style="font-weight: 500">
-              <a class="cat-title scroll-to-top" href="{{ secondary_category.get_absolute_url }}">{{ secondary_category.title }}</a>
-            </h2>
+
+        <div class="col-md-5 mt-1"> <!-- Right main column start  -->
+          <div class="col-md-12">  <!-- Secondary articles start  -->
+            <div class="row">
+              <h2 class="pb-3" style="font-weight: 500">
+                <a class="cat-title scroll-to-top" href="{{ secondary_category.get_absolute_url }}">{{ secondary_category.title }}</a>
+              </h2>
+            </div>
             {% for article in secondary_category.articles.all|slice:':2'  %}
-            <div class="row padding-right-20 pb-3">                    
-              <div class="col-md-12 article-preview" style="max-height: 150px;">
-                <div class="row pl-3 title">
+            <div class="row padding-right-20">                    
+              <div class="col-md-12">
+                <div class="row">
                   <h4><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h4>
                 </div>
-                <div class="row pl-3 text-lightbrown pub-date">
+                <div class="row text-lightbrown">
                   <p style="margin-bottom: 5px;">{{ article.pub_date.date }}</p>
                 </div>
-                <div class="row pl-3 short-description max-lines" style="color: rgb(63, 63, 63); font-size: 14px;">
+                <div class="row" style="color: rgb(63, 63, 63); font-size: 14px;">
                   <p>{{ article.short_description }}</p>
                 </div>                                              
               </div>            
             </div>
             {% endfor %}
           </div> <!-- Secondary articles end -->
-        <hr class="mt-0">
+          <hr class="mt-0">
+
           <div class="row other-articles"> <!-- other articles start  -->
               {% for article in other_articles|slice:':6' %}
                 {% if forloop.counter == 1   %}
-                {% comment %} openning left column div {% endcomment %}
-                <div id=otherArticlesLeftColumn class="col-md-6 border-right" style="height: 354px">
+                  <div id=otherArticlesLeftColumn class="col-6 border-right"> <!-- left column start  -->
                   {% include 'my_newsapp/snippets/other_article.html' %}
                 {% elif forloop.counter == 2 or forloop.counter == 3 %}
                   {% include 'my_newsapp/snippets/other_article.html' %}  
                 {% elif forloop.counter == 4 %}
-                </div>   {% comment %} closing left column div {% endcomment %}
-                {% comment %} openning right column div {% endcomment %}
-                <div id=otherArticlesRightColumn class="col-md-6 pl-4" style="height: 354px">
+                  </div>   <!-- left column end  -->
+                  <div id=otherArticlesRightColumn class="col-6 pl-4"> <!-- right column start  -->
                   {% include 'my_newsapp/snippets/other_article.html' %}
                 {% elif forloop.counter == 5 %} 
                   {% include 'my_newsapp/snippets/other_article.html' %}  
                 {% elif forloop.counter == 6 %} 
                   {% include 'my_newsapp/snippets/other_article.html' %}  
-                </div>  {% comment %} closing right column div {% endcomment %}
+                  </div> <!-- right column end  -->
                 {% endif %}  
               {% endfor %}
-          </div> {% comment %} end of other articles  {% endcomment %}
-        </div> {% comment %} end of right column  {% endcomment %}
+          </div> <!-- other articles start  -->
+        </div> <!-- Right main column end  -->
       </div>
   </div>
 {% endblock content %}
 
-{% block script %}
-  {{ block.super }}
-  <script src="{% static 'my_newsapp/home.js' %}"></script>
-{% endblock script %}
