--- a/my_newsapp/static/my_newsapp/style.css
+++ b/my_newsapp/static/my_newsapp/style.css
@@ -85,6 +85,19 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
 }
 /* ++++++++++++++++++++++++++++ */
 
+
+/* Navigation */
+.write-something-link {
+  color: rgb(0, 202, 0) !important;
+  font-weight: 600;
+}
+
+.custom-nav-spacing {
+  width: 120%;
+  margin: 0 auto;
+}
+/* ----------- */
+
 .mt-60px {
   margin-top: 60px;
 }
@@ -301,22 +314,10 @@ input[type='file'] {
 
 
 /* ---------------------- Bootstrap override ---------------------- */
-.custom-nav {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-  list-style: none;
-}
 
-.custom-nav .nav-link {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.navbar-nav {
-  display: flex !important;
-  justify-content: space-around !important;
+/* changes color of all nav-links but first - it stays green */
+.nav-link:nth-child(n+2) {
+  color: rgba(255, 255, 255, 0.7) !important;
 }
 
 .dropdown-toggle {
