--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
     <script src="{% static 'js/jquery-3.3.1.js' %}"></script>
     <script src="{% static 'js/bootstrap-4.0.0.js' %}"></script>
     <script src="{% static 'my_newsapp/script.js' %}"></script>
+    <script src="{% static 'my_newsapp/navigation.js' %}"></script>
   {% endblock script %}
 </body>
 </html>
