--- a/comments/templates/comments/base.html
+++ b/comments/templates/comments/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles comments_tags %}
 
-<!-- <link rel="stylesheet" href="{% static 'css/bootstrap-4.0.0.css' %}">
-<link rel="stylesheet" href="{% static 'comments/css/comments.css' %}"> -->
+ <!-- <link rel="stylesheet" href="{% static 'css/bootstrap-4.0.0.css' %}"> -->
+<!-- <link rel="stylesheet" href="{% static 'comments/css/comments.css' %}"> -->
 
 <!-- owner object's total comments number at the moment of page loading.
   used in .js files for managing visible comments and updateing comments-counter element-->
@@ -50,8 +50,8 @@
   </div>
 </div>
 
-<!-- <script src="{% static 'js/jquery-3.3.1.js' %}"></script>
-<script src="{% static 'js/bootstrap-4.0.0.js' %}"></script> -->
+ <!-- <script src="{% static 'js/jquery-3.3.1.js' %}"></script> -->
+<!-- <script src="{% static 'js/bootstrap-4.0.0.js' %}"></script> -->
 
 <!-- veoma bitno: type="module"  -> inače import u main.js-u ne radi ! -->
 <!-- <script type="module" src="{% static 'comments/js/main.js' %}"></script> -->
