--- a/my_newsapp/templates/my_newsapp/snippets/navigation.html
+++ b/my_newsapp/templates/my_newsapp/snippets/navigation.html
@@ -13,7 +13,7 @@
           <a class="nav-link write-something-link pl-0" href="{% url 'my_newsapp:create-article' %}">{% trans "Write Something" %}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/news/home/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'my_newsapp:home' %}">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
