test changes semaphore

--- a/my_newsapp/templates/my_newsapp/home.html
+++ b/my_newsapp/templates/my_newsapp/home.html
@@ -15,7 +15,7 @@
         {% if user.is_authenticated %}
           Welcome to Newsapp {{ request.user }}
         {% else %}
-          Welcome to Newsapp guest
+          Welcome to Newsapp guest hasdfhhasdfčlkasjdfkčlasdjfklčjač
         {% endif %}
       </h1>
       <p class="lead">Everything you need to share your knowledge...</p>
